# eunomia

./: .gitignore  CMakeLists.txt  abstractGateway.hpp  bookingOnPoint.hpp  bookingOnPointList.hpp  imapEmailGateway.hpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  server_status_terminal.hpp  stringUtils.hpp  textCorpus.hpp  textCorpusItem.hpp  utils.hpp
